# RefBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  error_handler.py  health_monitors.py  middleware.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: c5103d67075d_.py
auth/: check_admin.py
core/: media_utils.py
core/db/: database.py  db_filler.py
core/keyboards/: main_kb.py  search_kb.py  suggestion_kb.py
core/models/: __init__.py  base.py  messages.py
core/repositories/: new_reference_repository.py  search_repository.py
core/services/: new_ref_service.py  search_service.py  utils.py
core/states/: search_state.py  suggestion_state.py
redis_client/: redis.py
src/: bot.py  tg_client.py
views/: __init__.py
views/new_refernce_view/: new_ref_view.py
views/search_view/: handlers.py  search_view.py  utils.py
views/start_view/: start_view.py
views/suggestion_view/: suggestion_view.py  utils.py
