[project]
name = "refbot"
version = "0.1.0"
description = ""
authors = [
    { name = "Aleksandr Beliakov", email = "genzksync0@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "telethon (>=1.41.2,<2.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "aiobotocore (>=2.25.0,<3.0.0)",
    "cryptg (>=0.5.2,<0.6.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "structlog (>=25.5.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
